--- a/devOpsIsitech/package.json
+++ b/devOpsIsitech/package.json
@@ -21,13 +21,6 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "vite": "^4.3.0",
-    "commitizen": "^4.4.1",
-    "git-cz": "^4.14.0"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/git-cz"
-    }
+    "vite": "^4.3.0"
   }
 }
