--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,9 +1,9 @@
 name: Deploy to Vercel
 
 on:
-#  push:
-#    branches:
-#      - main
+  push:
+    branches:
+      - main
   pull_request:
     branches:
       - main
@@ -13,11 +13,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+    - name: lint
+      run: npm run lint
 
-    - name: Install dependencies
-      run: npm ci
+    - name: tests
+      run: npm run test
 
     - name: Build
       run: npm run build
