--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,8 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Install Vercel CLI
-        run: npm install --global vercel@latest
+      - name: Install Dependencies
+        run: npm install 
 
       # - name: Pull Vercel Environment Information
       #   run: vercel pull --yes --environment=production --token=${{ secrets.DEVOPS_ISI_TOKEN }}
