--- a/devOpsIsitech/package.json
+++ b/devOpsIsitech/package.json
@@ -20,6 +20,7 @@
     "babel-preset-react-app": "^10.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest-circus": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "jest-watch-typeahead": "^2.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
