--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,6 +12,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name : echo test
+        run: echo "test"
+
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
 
