--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,8 +21,8 @@ jobs:
       - name: Clear Cache
         run: npm cache clean --force
 
-      - name: Install Dependencies
-        run: npm install
+      # - name: Install Dependencies
+      #  run: npm install
 
       # - name: Pull Vercel Environment Information
       #   run: vercel pull --yes --environment=production --token=${{ secrets.DEVOPS_ISI_TOKEN }}
