--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,9 +12,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name : echo test
-        run: echo "test"
-
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
 
@@ -32,6 +29,9 @@ jobs:
 
       # - name: Deploy Project Artifacts to Vercel
       #   run: vercel deploy --prebuilt --prod --token=${{ secrets.DEVOPS_ISI_TOKEN }}
+
+      - name : show rep
+        run: ls
 
       - name: Lint
         run: npm run lint
