--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,6 +18,12 @@ jobs:
       - name: Clear Cache
         run: npm cache clean --force
 
+      - name : move to right folder
+        run: cd devOpsIsitech
+
+      - name : check we didn't move to the wrong folder
+        run: ls
+
       # - name: Install Dependencies
       #  run: npm install
 
@@ -30,8 +36,5 @@ jobs:
       # - name: Deploy Project Artifacts to Vercel
       #   run: vercel deploy --prebuilt --prod --token=${{ secrets.DEVOPS_ISI_TOKEN }}
 
-      - name : show rep
-        run: ls
-
       - name: Lint
-        run: cd devOpsIsitech && npm run lint
+        run: npm run lint
