--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,8 +24,8 @@ jobs:
       - name : check we didn't move to the wrong folder
         run: ls
 
-      # - name: Install Dependencies
-      #  run: npm install
+      - name: Install Dependencies
+        run: cd devOpsIsitech && npm install
 
       # - name: Pull Vercel Environment Information
       #   run: vercel pull --yes --environment=production --token=${{ secrets.DEVOPS_ISI_TOKEN }}
@@ -37,4 +37,4 @@ jobs:
       #   run: vercel deploy --prebuilt --prod --token=${{ secrets.DEVOPS_ISI_TOKEN }}
 
       - name: Lint
-        run: npm run lint
+        run: cd devOpsIsitech && npm run lint
