--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,23 +18,11 @@ jobs:
       - name: Clear Cache
         run: npm cache clean --force
 
-      - name : move to right folder
-        run: cd devOpsIsitech
-
-      - name : check we didn't move to the wrong folder
-        run: ls
-
       - name: Install Dependencies
         run: cd devOpsIsitech && npm install
 
-      # - name: Pull Vercel Environment Information
-      #   run: vercel pull --yes --environment=production --token=${{ secrets.DEVOPS_ISI_TOKEN }}
-
-      # - name: Build Project Artifacts
-      #   run: vercel build --prod --token=${{ secrets.DEVOPS_ISI_TOKEN }}
-
-      # - name: Deploy Project Artifacts to Vercel
-      #   run: vercel deploy --prebuilt --prod --token=${{ secrets.DEVOPS_ISI_TOKEN }}
-
       - name: Lint
         run: cd devOpsIsitech && npm run lint
+
+      - name: Tests
+        run: cd devOpsIsitech && npm run test
