--- a/devOpsIsitech/package.json
+++ b/devOpsIsitech/package.json
@@ -23,7 +23,8 @@
     "jest-environment-jsdom": "^29.5.0",
     "jest-watch-typeahead": "^2.2.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^5.3.10"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.21.4",
